@@ -40,6 +40,8 @@ lib/SPVM/Net/SSLeay/BIO.pm
 lib/SPVM/Net/SSLeay/BIO.spvm
 lib/SPVM/Net/SSLeay/Callback/TlsextServername.pm
 lib/SPVM/Net/SSLeay/Callback/TlsextServername.spvm
+lib/SPVM/Net/SSLeay/Callback/TlsextStatus.pm
+lib/SPVM/Net/SSLeay/Callback/TlsextStatus.spvm
 lib/SPVM/Net/SSLeay/ConfigBuilder.pm
 lib/SPVM/Net/SSLeay/Constant.c
 lib/SPVM/Net/SSLeay/Constant.config
